--- a/travel_recommendation.css
+++ b/travel_recommendation.css
@@ -6,6 +6,10 @@ body{
     background-color: #ccc;
 }
 
+nav{
+    display: flex;
+}
+
 ul{
     list-style-type: none;
 }
@@ -34,7 +38,6 @@ h1 p{
             padding: 20px;
             border-radius: 8px;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-            text-align: right;
         }
 
         input[type="text"] {
@@ -73,3 +76,35 @@ h1 p{
         button:hover {
             opacity: 0.9;
         }
+
+form[type="text"] {
+    width: 50%;
+    padding: 10px;
+    margin-bottom: 15px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+
+.team{
+    display: block;
+    width: 400px;
+    height: 400px;
+    padding: 10px;
+    margin: 10px;
+}
+
+#result{
+    display: block;
+    width: 400px;
+    height: 400px;
+    padding: 10px;
+    margin: 10px;
+}
+
+.discription{
+    display: block;
+    width: 400px;
+    height: 400px;
+    padding: 10px;
+    margin: 10px;
+}
